# django-ninja-auth-app-backend

./: .editorconfig  .env  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
devops/: entrypoint.sh  gunicorn.conf.py
src/: pyproject.toml
src/conf/: api.py  env.py  settings.py  urls.py
src/templates/registration/: password_reset_email.html
