[tool.poetry]
name = "django-ninja-auth-app-backend"
version = "0.1.0"
description = "Backend for the example app to showcase django-ninja-auth"
authors = ["Martín Ugarte <contact@martinugarte.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.4"
django-ninja = "^0.13.2"
pydantic = "^1.8.0"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.7"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pytest = "^7.4.0"
dj-database-url = "^2.1.0"

[tool.poetry.dev-dependencies]
isort = "^5.12.0"
ipython = "^8.14.0"
ruff = "^0.0.284"
pytest-django = "^4.5.2"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "conf.settings"
python_files = "tests.py test_*.py *_tests.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
